--- a/Resources/manifest.yml
+++ b/Resources/manifest.yml
@@ -1,5 +1,5 @@
-﻿defaultWindowTitle: Prospect Sector # PS
-windowIconSet: /Textures/_PS/Logo/icon # PS
-splashLogo: /Textures/_PS/Logo/logo.png # PS
+﻿defaultWindowTitle: Prospect Sector # Prospect
+windowIconSet: /Textures/_PS/Logo/icon # Prospect
+splashLogo: /Textures/_PS/Logo/logo.png # Prospect
 
 # PJB PLEASE
