--- a/Resources/Prototypes/_PS/Maps/prospect_sector.yml
+++ b/Resources/Prototypes/_PS/Maps/prospect_sector.yml
@@ -1,8 +1,7 @@
 ﻿- type: gameMap
   id: Prospect
   mapName: 'Prospect'
-  mapPath: /Maps/box.yml
-  #mapPath: /Maps/_PS/Outpost/prospect.yml
+  mapPath: /Maps/_PS/Outpost/prospect_sector.yml
   minPlayers: 0
   maxPlayers: 50
   randomRotation: false
@@ -12,7 +11,7 @@
       stationProto: StandardNanotrasenStation
       components:
       - type: StationNameSetup
-        mapNameTemplate: 'Prospector {1}'
+        mapNameTemplate: '{0}Prospector {1}'
         nameGenerator:
           !type:NanotrasenNameGenerator
           prefixCreator: 'E-'
