Add some meaningful names to the maps

--- a/Resources/Maps/Dungeon/haunted.yml
+++ b/Resources/Maps/Dungeon/haunted.yml
@@ -20,6 +20,7 @@ entities:
   - uid: 1653
     components:
     - type: MetaData
+      name: haunted prefabs # Prospect - adds meaning to map list
     - type: Transform
     - type: Map
     - type: Broadphase
