--- a/Resources/Maps/Dungeon/lava_brig.yml
+++ b/Resources/Maps/Dungeon/lava_brig.yml
@@ -26,6 +26,7 @@ entities:
   - uid: 588
     components:
     - type: MetaData
+      name: lava_brig prefabs # Prospect - adds meaning to map list
     - type: Transform
     - type: Map
     - type: Broadphase
