--- a/Resources/Maps/Dungeon/maints.yml
+++ b/Resources/Maps/Dungeon/maints.yml
@@ -33,6 +33,7 @@ entities:
   - uid: 1
     components:
     - type: MetaData
+      name: maints prefabs # Prospect - adds meaning to map list
     - type: Transform
     - type: Map
       mapPaused: True
