--- a/Resources/Maps/Dungeon/mineshaft.yml
+++ b/Resources/Maps/Dungeon/mineshaft.yml
@@ -15,6 +15,7 @@ entities:
   - uid: 2
     components:
     - type: MetaData
+      name: mineshaft prefabs # Prospect - adds meaning to map list
     - type: Transform
     - type: Map
     - type: Broadphase
