--- a/Resources/Maps/Dungeon/vgroidinterior.yml
+++ b/Resources/Maps/Dungeon/vgroidinterior.yml
@@ -19,6 +19,7 @@ entities:
   - uid: 1
     components:
     - type: MetaData
+      name: vgroidinterior prefabs # Prospect - adds meaning to map list
     - type: Transform
     - type: Map
       mapPaused: True
