--- a/Resources/Prototypes/_PS/Terradrop/terradrop.yml
+++ b/Resources/Prototypes/_PS/Terradrop/terradrop.yml
@@ -7,6 +7,7 @@
   - VeridiaTerraDropMap
   - SpironisTerraDropMap
   position: 5,5
+  unlockedByDefault: true
 
 - type: terradropMap
   id: VeridiaTerraDropMap
