--- a/Resources/Prototypes/_PS/Entities/Stations/prospect_station.yml
+++ b/Resources/Prototypes/_PS/Entities/Stations/prospect_station.yml
@@ -8,6 +8,7 @@
     - BaseStationAlertLevels
     - BaseStationMagnet
     - BaseStationRecords
+    - BaseStationEmergencyShuttleTarget
   categories: [ HideSpawnMenu ]
   components:
     - type: CargoStorageData
